# items

./: .gitignore  Makefile  README.md  cliff.toml  docker-compose.yaml  docker-compose.yml  test.http
.github/workflows/: ci.yml  docker-publish.yml
backend/: .env  Cargo.toml  Dockerfile  backend.http  gleam.toml  manifest.toml
backend/migrations/: 20240903054349_create_item_table.sql  20240910052351_create_gifter_table.sql  20240910155428_pictures.sql  20240922150357_remove_uneeded.sql  20240923164750_add_location_table.sql  20240929114730_add_category_table.sql  20241017123928_replace_picture_with_file.sql
backend/src/: category.rs  file.rs  gifter.rs  item.rs  location.rs  main.rs  picture.rs  router.rs
backend/src/data/: item.gleam
backend/src/helpers/: time.gleam  uuid.gleam
backend/src/router/: category.rs  common.rs  error.rs  file.rs  item.rs  location.rs  mod.rs
backend/test/data/: item_test.gleam
background/: Cargo.toml
database/: changelog.sql  liquibase.properties
frontend/: Dockerfile  README.md  deno.json  fresh.gen.ts  main.ts
frontend/routes/: _app.tsx  index.tsx
migrations/: 20240903054349_create_item_table.sql
