[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
rust-s3 = "0.35.1"
serde = { version = "1.0.213", features = ["derive"] }
sha256 = "1.5.0"
simple_logger = "5.0.0"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio"] }
structopt = "0.3.26"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["tokio", "tracing"] }
tower-http = { version = "0.5.2", features = ["trace"] }

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["native-tls", "json"] }
pretty_assertions = "1.4.1"
