[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
rust-s3 = "0.35.1"
serde = { version = "1.0.213", features = ["derive"] }
sha256 = "1.5.0"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio"] }
structopt = "0.3.26"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tower = { version = "0.5.1", features = ["tokio", "tracing"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["minio", "postgres"] }
http-body-util = "0.1.2"
serde_json = "1.0.132"
